# deep-learning-from-scratch

haskell/: .gitignore  create-mnist.sh  haskell.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: MNIST.hs
haskell/src/Chapter2/: Perceptron.hs
haskell/src/Chapter3/: Example.hs  Lib.hs  NeuralnetBatchMNIST.hs  NeuralnetMNIST.hs  StepFunctionGraph.hs  StepFunctionGraphPlot.hs  ThreeLayerNN.hs
haskell/test/: DocTest.hs
