name:                haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter2.Perceptron
                     , Chapter3.Example
                     , Chapter3.Lib
                     , Chapter3.StepFunctionGraph
                     , Chapter3.StepFunctionGraphPlot
                     , Chapter3.ThreeLayerNN
  build-depends:       base >= 4.9 && < 5
                     , Chart
                     , Chart-gtk
                     , colour
                     , classy-prelude
                     , data-default
                     , gnuplot
                     , hmatrix
                     , hmatrix-gsl-stats
                     , lens
                     , plot
                     , plot-gtk
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedLabels
                     , OverloadedLists
                     , OverloadedStrings
                     , PackageImports
                     , PartialTypeSignatures
                     , PatternSynonyms
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

executable haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , classy-prelude
                     , haskell
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedLabels
                     , OverloadedLists
                     , OverloadedStrings
                     , PackageImports
                     , PartialTypeSignatures
                     , PatternSynonyms
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns

test-suite haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite haskell-doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell
